# tap

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
demos/: export.tape  help.tape  inspect.tape
nix/modules/: devshell.nix  omnix.nix  rust.nix
src/: categories.rs  cli.rs  config.rs  device_picker.rs  export.rs  exporter.rs  inspect.rs  lib.rs  log.rs  main.rs  mount.rs  scanner.rs  tui.rs  zip.rs
