[package]
name = "tap"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
console = "0.16.1"
dialoguer = "0.12.0"
futures = "0.3.31"
indicatif = "0.18.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
walkdir = "2.5.0"
color-eyre = "0.6.5"
zip = "0.6"
