[package]
name = "tap"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A file investigation and export tool that categorizes files for LLM analysis"
readme = "README.md"
repository = "https://github.com/yourusername/tap"
license = "MIT OR Apache-2.0"
keywords = ["llm", "files", "categorization", "export", "analysis"]
categories = ["command-line-utilities", "filesystem"]
rust-version = "1.85"

[lib]
name = "tap"
path = "src/lib.rs"

[[bin]]
name = "tap"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
console = "0.16.1"
dialoguer = "0.12.0"
futures = "0.3.31"
indicatif = "0.18.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
walkdir = "2.5.0"
color-eyre = "0.6.5"
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
